; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/cr16/extr_cr16_disas.c_cr16_print_short_reg.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/cr16/extr_cr16_disas.c_cr16_print_short_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cr16_cmd = type { i32 }

@CR16_INSTR_MAXLEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"$0x%02x,%s\00", align 1
@cr16_regs_names = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cr16_cmd*, i64, i64)* @cr16_print_short_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cr16_print_short_reg(%struct.cr16_cmd* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cr16_cmd*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.cr16_cmd* %0, %struct.cr16_cmd** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = call i64 @cr16_check_reg_boundaries(i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %24

12:                                               ; preds = %3
  %13 = load %struct.cr16_cmd*, %struct.cr16_cmd** %5, align 8
  %14 = getelementptr inbounds %struct.cr16_cmd, %struct.cr16_cmd* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i64, i64* @CR16_INSTR_MAXLEN, align 8
  %17 = sub nsw i64 %16, 1
  %18 = load i64, i64* %6, align 8
  %19 = load i8**, i8*** @cr16_regs_names, align 8
  %20 = load i64, i64* %7, align 8
  %21 = getelementptr inbounds i8*, i8** %19, i64 %20
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 @snprintf(i32 %15, i64 %17, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i64 %18, i8* %22)
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %12, %11
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i64 @cr16_check_reg_boundaries(i64) #1

declare dso_local i32 @snprintf(i32, i64, i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
